# alga

./: .algebraic-graphs.cabal.swp  .ghci  .ghcid  .gitignore  .hlint.yaml  .travis.yml  AUTHORS.md  CHANGES.md  LICENSE  README.md  alga-core.cabal  alga.cabal  algebraic-graphs.cabal  appveyor.yml  default.nix  hie.yaml  stack.yaml  test-alga.prof.f  test-alga.prof.n
.github/workflows/: ci.yml
.travis/: timeout.sh
bench/: Bench.hs
doc/: benchmarks.md  sketch.md
src/Algebra/: Graph.hs
src/Algebra/Graph/: .Label.hs.swn  AdjacencyIntMap.hs  AdjacencyMap.hs  Base.hs  Basic.hs  Class.hs  Classes.hs  Data.hs  Dfs.hs  Export.hs  Fold.hs  HigherKinded.hs  IntAdjacencyMap.hs  Internal.hs  KingLaunchbury.hs  Label.hs  Labelled.hs  LabelledAdjacencyMap.hs  NonEmpty.hs  Relation.hs  ToGraph.hs  Todo.hs  TopSort.hs  Undirected.hs  Util.hs  Utilities.hs
src/Algebra/Graph/Acyclic/: AdjacencyIntMap.hs  AdjacencyMap.hs  Ord.hs
src/Algebra/Graph/Acyclic/AdjacencyMap/: Ord.hs
src/Algebra/Graph/Acyclic/Labelled/: AdjacencyMap.hs  Algorithm.hs
src/Algebra/Graph/Acyclic/Labelled/AdjacencyMap/: Algorithm.hs
src/Algebra/Graph/AdjacencyArray/: Unboxed.hs
src/Algebra/Graph/AdjacencyIntMap/: Algorithm.hs  Internal.hs
src/Algebra/Graph/AdjacencyMap/: Algorithm.hs  Int.hs  Internal.hs  NonEmpty.hs
src/Algebra/Graph/AdjacencyMap/NonEmpty/: Internal.hs
src/Algebra/Graph/Bipartite/: AdjacencyMap.hs
src/Algebra/Graph/Bipartite/AdjacencyMap/: Algorithm.hs
src/Algebra/Graph/Bipartite/Undirected/: AdjacencyMap.hs
src/Algebra/Graph/Bipartite/Undirected/AdjacencyMap/: Algorithm.hs
src/Algebra/Graph/Example/: Todo.hs
src/Algebra/Graph/Export/: Dot.hs
src/Algebra/Graph/Fold/: Internal.hs  Internal.hs~
src/Algebra/Graph/HigherKinded/: Base.hs  Class.hs  Classes.hs  Util.hs
src/Algebra/Graph/IntAdjacencyMap/: Internal.hs
src/Algebra/Graph/Labelled/: AdjacencyMap.hs
src/Algebra/Graph/Labelled/AdjacencyMap/: .Algorithm.hs.swp  Algorithm.hs  Internal.hs
src/Algebra/Graph/Labelled/AdjacencyMap/Algorithm/: .Dijkstra.hs.swp  Dijkstra.hs
src/Algebra/Graph/Labelled/Algorithm/: .Dijkstra.hs.swp  Dijkstra.hs
src/Algebra/Graph/Labelled/Example/: Automaton.hs  Network.hs
src/Algebra/Graph/LabelledAdjacencyMap/: Internal.hs
src/Algebra/Graph/NonEmpty/: AdjacencyIntMap.hs  AdjacencyMap.hs
src/Algebra/Graph/NonEmpty/AdjacencyMap/: Internal.hs
src/Algebra/Graph/Relation/: Internal.hs  InternalDerived.hs  Preorder.hs  Reflexive.hs  Symmetric.hs  SymmetricInternal.hs  Transitive.hs
src/Algebra/Graph/Relation/Symmetric/: Internal.hs
src/Algebra/Graph/Undirected/: UndirectedGraph.hs
src/Algebra/Graph/Util/: Int.hs
src/Data/Graph/: Typed.hs
test/: CHANGES.md  Main.hs  Test.hs
test/Algebra/Graph/: Test.hs
test/Algebra/Graph/Test/: API.hs  AdjacencyIntMap.hs  AdjacencyMap.hs  Arbitrary.hs  Export.hs  Fold.hs  Generic.hs  Graph.hs  GraphRules.hs  IntAdjacencyMap.hs  Internal.hs  Label.hs  LabelledAdjacencyMap.hs  NonEmptyGraph.hs  Relation.hs  RewriteRules.hs  Undirected.hs  Utilities.hs
test/Algebra/Graph/Test/Acyclic/: AdjacencyMap.hs  Ord.hs
test/Algebra/Graph/Test/Acyclic/Labelled/: AdjacencyMap.hs
test/Algebra/Graph/Test/AdjacencyMap/: NonEmpty.hs
test/Algebra/Graph/Test/Bipartite/: AdjacencyMap.hs
test/Algebra/Graph/Test/Bipartite/AdjacencyMap/: Algorithm.hs
test/Algebra/Graph/Test/Bipartite/Undirected/: AdjacencyMap.hs
test/Algebra/Graph/Test/Bipartite/Undirected/AdjacencyMap/: Algorithm.hs
test/Algebra/Graph/Test/Example/: Todo.hs
test/Algebra/Graph/Test/Graph/: NonEmpty.hs
test/Algebra/Graph/Test/Labelled/: AdjacencyMap.hs  Graph.hs
test/Algebra/Graph/Test/NonEmpty/: AdjacencyIntMap.hs  AdjacencyMap.hs  Graph.hs
test/Algebra/Graph/Test/Relation/: Symmetric.hs  SymmetricRelation.hs
test/Data/Graph/Test/: Typed.hs
test/Rewrite/: Rewrite.hs
test/Rewrite/Test/: Transpose.hs
