name:          alga-core
version:       0.0.1
synopsis:      A library for algebraic graph construction and transformation
license:       MIT
license-file:  LICENSE
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2016
homepage:      https://github.com/snowleopard/alga
category:      Algebra
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://github.com/snowleopard/alga.git

library
    hs-source-dirs:     src
    exposed-modules:    Algebra.Graph,
                        Algebra.Graph.AdjacencyMap,
                        Algebra.Graph.AdjacencyArray.Unboxed,
                        Algebra.Graph.AdjacencyMap.Int,
                        Algebra.Graph.Classes,
                        Algebra.Graph.Data,
                        Algebra.Graph.Dfs,
                        Algebra.Graph.Relation,
                        Algebra.Graph.Relation.Internal,
                        Algebra.Graph.Relation.Preorder,
                        Algebra.Graph.Relation.Reflexive,
                        Algebra.Graph.Relation.Symmetric,
                        Algebra.Graph.Relation.Transitive,
                        Algebra.Graph.Todo,
                        Algebra.Graph.TopSort,
                        Algebra.Graph.Util,
                        Algebra.Graph.Util.Int
    build-depends:      array      >= 0.5,
                        base       >= 4.8 && < 5,
                        containers == 0.5.*,
                        QuickCheck >= 2.9.2
    default-language:   Haskell2010
    default-extensions: FlexibleContexts
                        GeneralizedNewtypeDeriving
                        ScopedTypeVariables
                        TupleSections
                        TypeFamilies
    other-extensions:   DeriveFoldable
                        DeriveFunctor
                        DeriveTraversable
                        OverloadedStrings
    GHC-options:        -O2 -Wall -fwarn-tabs

test-suite test-alga
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0
    main-is:            Test.hs
    other-modules:      Algebra.Graph.Test,
                        Algebra.Graph.Test.Arbitrary
    build-depends:      alga-core,
                        base       >= 4.8 && < 5,
                        containers == 0.5.*,
                        extra      >= 1.5.1,
                        QuickCheck >= 2.9.2
    default-language:   Haskell2010
    GHC-options:        -O2 -Wall -fwarn-tabs
    default-extensions: FlexibleContexts
                        TypeFamilies
                        ScopedTypeVariables
    other-extensions:   RankNTypes

benchmark benchmark-alga
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            Bench.hs
    build-depends:      alga-core,
                        base       >= 4.8 && < 5,
                        containers == 0.5.*,
                        criterion
    default-language:   Haskell2010
    GHC-options:        -O2 -Wall -fwarn-tabs
    default-extensions: FlexibleContexts
                        TypeFamilies
                        ScopedTypeVariables
