name:          alga
version:       0.0.1
synopsis:      An algebra of graphs
license:       MIT
license-file:  LICENSE
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2016
homepage:      https://github.com/snowleopard/alga
category:      Algebra
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://github.com/snowleopard/alga.git

library
    hs-source-dirs:   src
    exposed-modules:  Algebra.Graph,
                      Algebra.Graph.AdjacencyMap,
                      Algebra.Graph.Basic,
                      Algebra.Graph.Relation,
                      Algebra.Graph.Util
    build-depends:    base       >= 4.8 && < 5,
                      containers == 0.5.*,
                      QuickCheck >= 2.6 && < 2.9
    default-language: Haskell2010
    other-extensions: DeriveFunctor
                      DeriveFoldable
                      DeriveTraversable
                      FlexibleContexts
                      TypeFamilies
                      TupleSections
    GHC-options:      -O2 -Wall -fwarn-tabs

test-suite test-alga
    hs-source-dirs:   test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:    base >= 4.8 && < 5,
                      QuickCheck >= 2.6 && < 2.9,
                      alga
    default-language: Haskell2010
    GHC-options:      -O2 -Wall -fwarn-tabs
    other-extensions: ScopedTypeVariables
