name:          alga
version:       0.0.1
synopsis:      An algebra of graphs
license:       MIT
license-file:  LICENSE
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2016
homepage:      https://github.com/snowleopard/alga
category:      Algebra
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://github.com/snowleopard/alga.git

library
    hs-source-dirs:     src
    exposed-modules:    Algebra.Graph,
                        Algebra.Graph.AdjacencyMap,
                        Algebra.Graph.Basic,
                        Algebra.Graph.Dfs,
                        Algebra.Graph.Relation,
                        Algebra.Graph.Todo,
                        Algebra.Graph.TopSort,
                        Algebra.Graph.Util
    build-depends:      base       >= 4.8 && < 5,
                        containers == 0.5.*,
                        extra      == 1.4.10,
                        QuickCheck >= 2.6 && < 2.9
    default-language:   Haskell2010
    default-extensions: ScopedTypeVariables
                        TupleSections
                        TypeFamilies
    other-extensions:   DeriveFoldable
                        DeriveFunctor
                        DeriveTraversable
                        FlexibleContexts
                        OverloadedStrings
    GHC-options:        -O2 -Wall -fwarn-tabs

test-suite test-alga
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0
    main-is:            Test.hs
    other-modules:      Algebra.Graph.Test
    build-depends:      alga,
                        base       >= 4.8 && < 5,
                        extra      == 1.4.10,
                        QuickCheck >= 2.6 && < 2.9
    default-language:   Haskell2010
    GHC-options:        -O2 -Wall -fwarn-tabs
    default-extensions: TypeFamilies
                        ScopedTypeVariables
    other-extensions:   FlexibleContexts
                        RankNTypes
